text overflow fix for firefox

--- a/Savage Worlds - Graph Paper/SavageWorldsGraphPaper.css
+++ b/Savage Worlds - Graph Paper/SavageWorldsGraphPaper.css
@@ -1994,7 +1994,7 @@ div.sheet-health:not(:hover) .sheet-health__center .sheet-hexfield input:focus ~
 
 .sheet-skills__button > span {
   display: block;
-  padding-right: 8px;
+  padding: 1px 8px 1px 0;
   max-width: 88px;
   overflow: hidden;
   text-overflow: ellipsis;
