--- a/Savage Worlds - Graph Paper/source/styles/_skills.scss
+++ b/Savage Worlds - Graph Paper/source/styles/_skills.scss
@@ -198,7 +198,7 @@
 
     > span {
       display: block;
-      padding-right: 8px;
+      padding: 1px 8px 1px 0;
       max-width: 88px;
       overflow: hidden;
       text-overflow: ellipsis;
